web-infras/parser/tests/fixtures/babel/es2015/uncategorised/276/output.txt
[SyntaxError]: Numeric Literal and string literal can not use as shorted property. (1,4)
1|({ 42 }) = obj
 |  ^
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|({ 42 }) = obj
 |^
